--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
 
     </div>
-    <script src="V:\Projects\Dice\index.js" charset="utf-8"></script>
+    <script src="index.js" charset="utf-8"></script>
 
 
   </body>
